<resources>
    <string name="app_name">achapter</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="create_an_account">Create An Account</string>
    <string name="hint_your_name">Your name</string>
    <string name="have_an_account">Have an account?</string>
    <string name="by_pressing_register"><![CDATA[By pressing \"Register\" you agree to our terms & conditions]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_cart">Cart</string>
    <string name="menu_title_profile">Profile</string>
    <string name="placeholder_email">info@achapter.com</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_my_wishlist">My Wishlist</string>
    <string name="text_my_purchases">My Purchases</string>
    <string name="text_my_addresses">My Addresses</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="content_desc_book_cover">Book Cover</string>
    <string name="content_desc_user_picture">User picture</string>
    <string name="tools_text_price">Rp. 75.000</string>
    <string name="tools_feed_header">Popular books</string>
    <string name="search_hint">Search ISBN, book title, author, or publisher</string>
    <string name="text_categories">Categories</string>
    <string name="text_more">More</string>
    <string name="text_deskripsi_singkat">Deskripsi Singkat</string>
</resources>
