<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp"
    tools:context=".view.RegisterActivity">

    <TextView
        android:id="@+id/txtCreate"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/inpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCreate"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_round"
        android:hint="@string/hint_your_name"
        android:inputType="text"
        android:maxLines="1"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="#ACACAC"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/inpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inpName"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_round"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="#ACACAC"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/inpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inpEmail"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_round"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="#ACACAC"
        android:textSize="15sp" />


    <Button
        android:id="@+id/btnRegister"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inpPassword"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/register" />

    <LinearLayout
        android:id="@+id/txtHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textColor="#ACACAC"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/login"
            android:textColor="#147A73"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtHave"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:lines="2"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:text="@string/by_pressing_register"
        android:textAlignment="center" />

</RelativeLayout>