<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/karla"
        android:paddingStart="@dimen/activity_padding"
        android:paddingEnd="@dimen/activity_padding"
        android:text="@string/text_edit_profile"
        android:textAlignment="textStart"
        android:textAllCaps="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnWishList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/karla"
        android:paddingStart="@dimen/activity_padding"
        android:paddingEnd="@dimen/activity_padding"
        android:text="@string/text_my_wishlist"
        android:textAlignment="textStart"
        android:textAllCaps="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnPurchases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/karla"
        android:paddingStart="@dimen/activity_padding"
        android:paddingEnd="@dimen/activity_padding"
        android:text="@string/text_my_purchases"
        android:textAlignment="textStart"
        android:textAllCaps="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnAddresses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/karla"
        android:paddingStart="@dimen/activity_padding"
        android:paddingEnd="@dimen/activity_padding"
        android:text="@string/text_my_addresses"
        android:textAlignment="textStart"
        android:textAllCaps="false" />

</LinearLayout>